--- a/package.json
+++ b/package.json
@@ -36,14 +36,22 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "browserconfig-loader": "^0.0.0",
+    "caniuse-db": "^1.0.30000670",
     "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.28.1",
+    "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
     "image-webpack-loader": "^3.3.1",
+    "node-sass": "^4.5.3",
+    "normalize.css": "^7.0.0",
     "offline-plugin": "^4.7.0",
+    "postcss-loader": "^2.0.5",
     "preact-render-to-string": "^3.6.2",
+    "sass-loader": "^6.0.5",
     "static-site-generator-webpack-plugin": "^3.4.1",
+    "style-loader": "^0.17.0",
     "webpack": "^2.5.1",
     "webpack-dev-server": "^2.4.5"
   }
